--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "Benjamin Toll <benjam72@yahoo.com> (http://www.benjamintoll.com)",
   "license": "ISC",
   "dependencies": {
-    "esprima": "^2.7.0"
+    "esprima": "^2.7.0",
+    "yargs": "^3.29.0"
   },
   "directories": {
     "test": "test"
