Added MIT license

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "esprima"
   ],
   "author": "Benjamin Toll <benjam72@yahoo.com> (http://www.benjamintoll.com)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "esprima": "^2.7.0",
     "yargs": "^3.29.0"
