--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js:
-    - "0.10"
-    - "0.12"
-    - iojs
-    - "4"
-    - "5"
+  - "5"
+  - "4"
+  - "0.12"
+  - "0.10"
+before_install:
+  - npm i -g eslint
 sudo: false
 
