--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "main": "./index.js",
   "scripts": {
-    "test": "exit 0"
+    "lint": "eslint index.js lib bin",
+    "test": "npm run lint"
   },
   "keywords": [
     "describes",
