--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
   },
   "main": "./index.js",
   "scripts": {
-    "lint": "eslint index.js lib bin",
-    "test": "npm run lint"
+    "clean": "rm -rf build coverage",
+    "compile": "babel -d build src",
+    "coverage": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover jasmine --captureExceptions",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "lint": "eslint bin spec src",
+    "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
+    "test": "npm run clean && npm run lint && npm run compile && npm run specs"
   },
   "keywords": [
     "describes",
@@ -35,6 +40,11 @@
   },
   "homepage": "https://github.com/btoll/dump_describes#readme",
   "devDependencies": {
-    "eslint": "^2.2.0"
+    "babel-core": "^6.6.4",
+    "babel-preset-es2015": "^6.6.0",
+    "coveralls": "^2.11.8",
+    "eslint": "^2.2.0",
+    "istanbul": "^0.4.2",
+    "jasmine-core": "^2.4.1"
   }
 }
