--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dump_describes",
   "version": "0.1.0",
-  "description": "List all `describes` blocks in a Jasmine suite",
+  "description": "View all `describe` and `it` blocks in a test suite",
   "bin": {
     "dump_describes": "./bin/dump_describes"
   },
-  "main": "./index.js",
+  "main": "./src/index.js",
   "scripts": {
     "clean": "rm -rf build coverage",
     "compile": "babel -d build src",
@@ -17,8 +17,12 @@
   },
   "keywords": [
     "describes",
+    "it",
     "jasmine",
+    "mocha",
     "esprima",
+    "unit testing",
+    "testing",
     "test",
     "suite"
   ],
@@ -48,3 +52,4 @@
     "jasmine-core": "^2.4.1"
   }
 }
+
