Added ./scripts/watch.bash watch script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint bin spec src",
     "specs": "JASMINE_CONFIG_PATH=jasmine.json jasmine",
-    "test": "npm run clean && npm run lint && npm run compile && npm run specs"
+    "test": "npm run clean && npm run lint && npm run compile && npm run specs",
+    "watch": "bash ./scripts/watch.bash"
   },
   "keywords": [
     "describes",
