Added my logger package and removed the chalk package

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "author": "Benjamin Toll <benjam72@yahoo.com> (http://www.benjamintoll.com)",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^1.1.1",
     "esprima": "^2.7.0",
+    "logger": "git+https://github.com/btoll/logger.git",
     "yargs": "^3.29.0"
   },
   "directories": {
