--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dump_describes",
-  "version": "0.5.0",
+  "version": "0.1.0",
   "description": "View all `describe` and `it` blocks in a test suite",
   "bin": {
     "dump_describes": "./bin/dump_describes"
@@ -32,8 +32,8 @@
   "license": "MIT",
   "dependencies": {
     "esprima": "^2.7.0",
-    "logger": "git+https://github.com/btoll/logger.git",
-    "s": "git+https://github.com/btoll/s.git",
+    "onf-logger": "^0.1.0",
+    "onf-static": "git+https://github.com/btoll/onf-static.git",
     "yargs": "^3.29.0"
   },
   "directories": {
