--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dump_describes",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "View all `describe` and `it` blocks in a test suite",
   "bin": {
     "dump_describes": "./bin/dump_describes"
@@ -22,6 +22,7 @@
     "it",
     "jasmine",
     "mocha",
+    "jest",
     "esprima",
     "unit testing",
     "testing",
