--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dump_describes",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "View all `describe` and `it` blocks in a test suite",
   "bin": {
     "dump_describes": "./bin/dump_describes"
@@ -32,7 +32,7 @@
   "author": "Benjamin Toll <benjam72@yahoo.com> (http://www.benjamintoll.com)",
   "license": "GPLv3",
   "dependencies": {
-    "esprima": "^2.7.0",
+    "esprima": ">=4.x",
     "jasmine": "^3.4.0",
     "onf-logger": "^0.1.0",
     "onf-static": "git+https://github.com/btoll/onf-static.git",
